# float8

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  rand_distr.rs
tests/: close.rs  f8e4m3.rs  f8e5m2.rs  rand_distr.rs
